--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
   color: #333;
 }
 
-.wrapper {
+.main-content {
   padding-top: 4rem;
   width: 90%;
   margin: 0 auto;
@@ -26,7 +26,7 @@ body {
   font-size: 2.5rem; 
 }
 
-.author {
+.origin {
   font-family: 'Crimson Text', serif;
   font-size: 1.5rem;
   font-style: italic;
